--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,16 +7,16 @@ roomKtx = "2.7.1"
 coreKtx = "1.16.0"
 lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
-uiViewbinding = "1.8.1"
-composeBom = "2025.05.00"
+uiViewbinding = "1.8.2"
+composeBom = "2025.05.01"
 navigationCompose = "2.9.0"
-media3 = "1.6.1"
+media3 = "1.7.1"
 splashscreen = "1.0.1"
 materialIconsExtended = "1.7.8"
 hiltNavigationCompose = "1.2.0"
 cameraX = "1.4.2"
 zxing = "3.3.3"
-datastorePreferences = "1.1.4" # Using 1.1.4 -> https://issuetracker.google.com/issues/413078297
+datastorePreferences = "1.1.7"
 accompanist-permissions = "0.36.0"
 desugarJdkLibs = "2.1.5"
 
