--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
 agp = "8.13.0"
-kotlin = "2.2.20"
+kotlin = "2.2.21"
 hilt = "2.57.2"
-ksp = "2.2.20-2.0.3"
-roomKtx = "2.8.2"
+ksp = "2.3.0"
+roomKtx = "2.8.3"
 coreKtx = "1.17.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-uiViewbinding = "1.9.3"
-composeBom = "2025.10.00"
+uiViewbinding = "1.9.4"
+composeBom = "2025.10.01"
 navigationCompose = "2.9.5"
 media3 = "1.8.0"
 splashscreen = "1.0.1"
