Added MainViewModel for MainActivity state management

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         tools:targetApi="35">
 
         <activity
-            android:name=".app.MainActivity"
+            android:name=".app.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
